# GamedevResourcePacker

./: .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.hpp  Exception.hpp  Main.cpp  Object.hpp  ObjectManager.cpp  ObjectManager.hpp  PluginAPI.hpp  PluginManager.cpp  PluginManager.hpp
Core/BundleIndependentCode/: CMakeLists.txt  CheckedFileRead.hpp  Core.cpp  Core.hpp  Exception.hpp  Object.cpp  Object.hpp  RuntimeGroup.cpp  RuntimeGroup.hpp
ExampleAssets/Maps/: Level1.xml
Plugins/DataObjects/: CMakeLists.txt  DataClass.cpp  DataClass.hpp  DataClassProvider.cpp  DataClassProvider.hpp  DataObject.cpp  DataObject.hpp  DataObjectArrayField.cpp  DataObjectArrayField.hpp  DataObjectField.cpp  DataObjectField.hpp  DataObjectReferenceField.cpp  DataObjectReferenceField.hpp  DataObjectSimpleField.hpp  DataObjectValueField.cpp  DataObjectValueField.hpp  Plugin.cpp  PluginAPI.cpp  PluginAPI.hpp
Shared/: BinaryGenerationTask.hpp  CMakeLists.txt  FileDependentBinaryGenerationTask.cpp  FileDependentBinaryGenerationTask.hpp  FileDependentGenerationTask.cpp  FileDependentGenerationTask.hpp  FileUtils.cpp  FileUtils.hpp  GenerationTask.hpp  MultithreadedLog.cpp  MultithreadedLog.hpp  Object.cpp  Object.hpp  ObjectReference.cpp  ObjectReference.hpp  PluginAPI.hpp  StringHash.cpp  StringHash.hpp
TestAssets/DataObjects/DataClassLoad/: CorrectClass.xml
TestAssets/DataObjects/DataObjectLoad/: AdditionalClass.xml  CoreClass.xml  Expected.txt  Object.xml
Tests/DataObjects/: CMakeLists.txt  DataClassLoad.cpp  DataObjectLoad.cpp  Main.cpp
